DDW-16 Table comparison view for stake pools - fixes

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -471,6 +471,7 @@
   "staking.stakePools.tableHeader.margin": "Margin",
   "staking.stakePools.tableHeader.performance": "Performance",
   "staking.stakePools.tableHeader.pledge": "Pledge",
+  "staking.stakePools.tableHeader.potentialRewards": "Potential rewards",
   "staking.stakePools.tableHeader.producedBlocks": "Produced Blocks",
   "staking.stakePools.tableHeader.rank": "Rank",
   "staking.stakePools.tableHeader.retiring": "Retiring in",
