--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -468,14 +468,15 @@
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
   "staking.stakePools.tableHeader.cost": "!!!Cost (ADA)",
-  "staking.stakePools.tableHeader.margin": "!!!Margin",
+  "staking.stakePools.tableHeader.margin": "マージン",
   "staking.stakePools.tableHeader.performance": "!!!Performance",
-  "staking.stakePools.tableHeader.pledge": "!!!Pledge",
-  "staking.stakePools.tableHeader.producedBlocks": "!!!Produced Blocks",
-  "staking.stakePools.tableHeader.rank": "!!!Rank",
+  "staking.stakePools.tableHeader.pledge": "出資",
+  "staking.stakePools.tableHeader.potentialRewards": "見込み報酬額",
+  "staking.stakePools.tableHeader.producedBlocks": "生成ブロック数",
+  "staking.stakePools.tableHeader.rank": "ランク",
   "staking.stakePools.tableHeader.retiring": "!!!Retiring in",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
-  "staking.stakePools.tableHeader.saturation": "!!!Saturation",
+  "staking.stakePools.tableHeader.saturation": "飽和",
   "staking.stakePools.tableHeader.ticker": "!!!Ticker",
   "staking.stakePools.tableHeader.uptime": "!!!Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
