[DDW-421]: Update stakepool tooltip

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -454,7 +454,7 @@
   "staking.stakePools.rankingAllWallets": "すべてのウォレット",
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
   "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
-  "staking.stakePools.rankingDescription": "スライダーを使用して、委任する量を基にステークプールをランク付けします。",
+  "staking.stakePools.rankingDescription": "スライダーを使用して、<b>委任しようとしているステーク量を基にした</b>ステークプールのランクと見込み報酬額を確認してください。",
   "staking.stakePools.rankingExtraTooltip": "ADA流通量",
   "staking.stakePools.rankingLearnMoreUrl": "https://iohk.zendesk.com/hc/ja",
   "staking.stakePools.rankingMaxTooltip": "ステークプール飽和点",
@@ -469,16 +469,24 @@
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
+  "staking.stakePools.tooltip.costPerEpochTooltip": "各エポックで得られた報酬から差し引かれるステークプールの固定運営費",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
   "staking.stakePools.tooltip.pledge": "出資：",
+  "staking.stakePools.tooltip.pledgeTooltip": "プールオペレーターが自分のプールに投資するステーク量で、出資額が多いプールは、より多くの報酬を自身と委任者にもたらすが、出資をしないプールは報酬を稼ぐことができず、ランクが低くなる",
   "staking.stakePools.tooltip.potentialRewards": "見込み報酬額：",
+  "staking.stakePools.tooltip.potentialRewardsTooltip": "意図したステーク量を委任した場合に、エポックごとに得られると見込まれる報酬額の見積もりで、システムはプールのパラメーターとパフォーマンスデータの履歴を考慮し、見込み報酬額を算出するが、その際、プールが飽和値に達していることを想定している",
   "staking.stakePools.tooltip.producedBlocks": "生成ブロック数：",
+  "staking.stakePools.tooltip.producedBlocksTooltip": "対象のステークプールが生成したブロックの総数",
   "staking.stakePools.tooltip.profitMargin": "プールマージン：",
+  "staking.stakePools.tooltip.profitMarginTooltip": "プールが得る利益としてプールが設定した、プールに委任されたステークへの報酬から差し引く割合",
   "staking.stakePools.tooltip.ranking": "ランク：",
-  "staking.stakePools.tooltip.relativeStake": "管理下のステーク：",
+  "staking.stakePools.tooltip.rankingTooltip": "対象プールに意図した量のステークを委任することにより得られる見込み報酬に基づいたランキングで、計算は飽和状態を想定",
+  "staking.stakePools.tooltip.relativeStake": "ライブステーク：",
+  "staking.stakePools.tooltip.relativeStakeTooltip": "システムのステーク総量に対する、プールに出資されたステークと現在委任されているステークの合計",
   "staking.stakePools.tooltip.retirement": "あと{retirementFromNow}で終了",
   "staking.stakePools.tooltip.saturation": "飽和：",
+  "staking.stakePools.tooltip.saturationTooltip": "プールのステーク数を計測し、プール数が増加しても、報酬増加に反映されなくなる時点を示すもので、この上限を定めるメカニズムにより、ユーザーが飽和状態のステークプールに委任することを抑制することで、分散化を促進する",
   "static.about.buildInfo": "{platform} ビルド <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
   "static.about.buildInfoForITN": "{platform} ビルド <strong>{build}</strong>, {apiName} <strong>{apiVersion}</strong>",
   "static.about.content.cardano.headline": "Cardanoチーム：",
