DDW-16 Table comparison view for stake pools - adding a fix for empty table search

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -467,17 +467,17 @@
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
-  "staking.stakePools.tableHeader.cost": "!!!Cost (ADA)",
+  "staking.stakePools.tableHeader.cost": "費用 (ADA)",
   "staking.stakePools.tableHeader.margin": "マージン",
   "staking.stakePools.tableHeader.performance": "!!!Performance",
   "staking.stakePools.tableHeader.pledge": "出資",
   "staking.stakePools.tableHeader.potentialRewards": "見込み報酬額",
   "staking.stakePools.tableHeader.producedBlocks": "生成ブロック数",
   "staking.stakePools.tableHeader.rank": "ランク",
-  "staking.stakePools.tableHeader.retiring": "!!!Retiring in",
+  "staking.stakePools.tableHeader.retiring": "で引退",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
   "staking.stakePools.tableHeader.saturation": "飽和",
-  "staking.stakePools.tableHeader.ticker": "!!!Ticker",
+  "staking.stakePools.tableHeader.ticker": "ティッカー",
   "staking.stakePools.tableHeader.uptime": "!!!Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
