--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -454,7 +454,7 @@
   "staking.stakePools.rankingAllWallets": "すべてのウォレット",
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
   "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
-  "staking.stakePools.rankingDescription": "スライダーを使用して、<b>委任しようとしているステーク量を基にした</b>ステークプールのランクと見込み報酬額を確認してください。",
+  "staking.stakePools.rankingDescription": "スライダーを使用して、<strong>委任しようとしているステーク量を基にした</strong>ステークプールのランクと見込み報酬額を確認してください。",
   "staking.stakePools.rankingExtraTooltip": "ADA流通量",
   "staking.stakePools.rankingLearnMoreUrl": "https://iohk.zendesk.com/hc/ja",
   "staking.stakePools.rankingMaxTooltip": "ステークプール飽和点",
